[gd_scene load_steps=14 format=2]

[ext_resource path="res://SRC/GUI/HUD.gd" type="Script" id=1]
[ext_resource path="res://SRC/Fonts/Pixel_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://SRC/Fonts/Pixel_font_big.tres" type="DynamicFont" id=3]
[ext_resource path="res://SRC/Fonts/m5x7.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://SRC/Assets/Images/Hands_frame1.png" type="Texture" id=5]
[ext_resource path="res://SRC/Assets/Images/Hands_frame4.png" type="Texture" id=6]
[ext_resource path="res://SRC/Assets/Images/Hands_frame3.png" type="Texture" id=7]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=6]
outline_size = 1
outline_color = Color( 0.141176, 0, 1, 1 )
font_data = ExtResource( 4 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Label" type="Label" parent="Control"]
margin_left = 7.14987
margin_top = 5.95823
margin_right = 89.1499
margin_bottom = 19.9582
custom_fonts/font = ExtResource( 2 )
text = "Your legs: "

[node name="Label2" type="Label" parent="Control"]
margin_left = 189.291
margin_top = 5.95823
margin_right = 307.291
margin_bottom = 19.9582
custom_fonts/font = ExtResource( 2 )
text = "Opponent legs: "

[node name="Win" type="Label" parent="Control"]
visible = false
margin_left = 118.09
margin_top = 55.0008
margin_right = 196.09
margin_bottom = 93.0008
custom_fonts/font = ExtResource( 3 )
text = "WON!!!"

[node name="Lost" type="Label" parent="Control"]
visible = false
margin_left = 118.09
margin_top = 55.0008
margin_right = 196.09
margin_bottom = 93.0008
custom_fonts/font = ExtResource( 3 )
text = "LOST!"

[node name="Restart" type="Button" parent="Control"]
visible = false
margin_left = 127.599
margin_top = 117.336
margin_right = 184.599
margin_bottom = 137.336
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "Restart"

[node name="Start" type="Button" parent="Control"]
margin_left = 127.599
margin_top = 117.336
margin_right = 184.599
margin_bottom = 137.336
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "START"

[node name="Rock" type="TextureButton" parent="Control"]
visible = false
margin_left = 7.97631
margin_top = 28.3436
margin_right = 36.9763
margin_bottom = 45.3436
action_mode = 0
texture_normal = ExtResource( 5 )

[node name="Scissor" type="TextureButton" parent="Control"]
visible = false
margin_left = 44.7803
margin_top = 27.8298
margin_right = 73.7803
margin_bottom = 44.8298
action_mode = 0
texture_normal = ExtResource( 6 )

[node name="Paper" type="TextureButton" parent="Control"]
visible = false
margin_left = 85.3682
margin_top = 28.8942
margin_right = 114.368
margin_bottom = 45.8942
action_mode = 0
texture_normal = ExtResource( 7 )
[connection signal="pressed" from="Control/Restart" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Control/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Control/Rock" to="." method="_on_Rock_pressed"]
[connection signal="pressed" from="Control/Scissor" to="." method="_on_Scissor_pressed"]
[connection signal="pressed" from="Control/Paper" to="." method="_on_Paper_pressed"]
